[build-system]
requires = ["setuptools>=61.0,<76.0", "wheel>=0.37.0,<1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-ram-disk-manager"
version = "2.2.0"
description = "Cross-platform RAM disk manager for CASCADE Enterprise"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CIPS Corp", email = "glass@cipscorps.io"}
]
maintainers = [
    {name = "CIPS Corp", email = "glass@cipscorps.io"}
]
keywords = [
    "ram-disk",
    "ramdisk",
    "memory",
    "tmpfs",
    "imdisk",
    "diskutil",
    "performance",
    "cache",
    "sync",
    "dual-write",
    "high-performance",
    "cross-platform",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
fast = [
    "xxhash>=3.0.0,<4.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "black>=23.0.0,<25.0.0",
    "mypy>=1.0.0,<2.0.0",
    "xxhash>=3.0.0,<4.0.0",
]
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
]

[project.urls]
Homepage = "https://cipscorps.io"
Documentation = "https://cipscorps.io/cascade-enterprise"
Repository = "https://github.com/cipscorp/cascade-enterprise-ram.git"
Issues = "https://github.com/cipscorp/cascade-enterprise-ram/issues"
Changelog = "https://github.com/cipscorp/cascade-enterprise-ram/blob/main/CHANGELOG.md"

[project.scripts]
cascade-ramdisk = "ram_disk_manager.__main__:main"

[tool.setuptools]
packages = ["ram_disk_manager", "ram_disk_manager.backends", "ram_disk_manager.sync", "ram_disk_manager.recovery", "ram_disk_manager.utils"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
ram_disk_manager = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
    | \.eggs
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["ram_disk_manager"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
